--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
+body{color: white;
+	background-color: black; }
 
+h1 { font-size:25px;}
+
+p {font-size:12px;
+   color:#00ff00;}
+
+div class="myDiv";
+
+.myDiv { border-style: dotted; border-width: 2px;
+      width:100px; height:100px;	
+}
+
+div 
+
+ol {style
+
+ul {style	
