--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,14 @@
 body{color: white;
 	background-color: black; }
 
-h1 { font-size:25px;}
+h1 { font-size:20px;}
 
 p {font-size:12px;
    color:#00ff00;}
 
-div class="myDiv";
-
-
-div 
-
-ol {style
-
-ul {style	
+div.myDiv { border-style: dotted; border-width: 2px;
+			width:100px; height:100px;	
+	}
+	
+ol.a {list-style-type: upper-alpha;}	
+ul.b {list-style-type: square;}
