--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,25 @@
-body{color: white;
-	background-color: black; }
+body{
+	color: white;
+	background-color: black; 
+}
 
-h1 { font-size:20px;}
+h1 { 
+	font-size:20px;
+}
 
-p {font-size:12px;
-   color:#00ff00;}
+p 	{
+	font-size:12px;
+   color:#00ff00;
+}
 
-div.myDiv { border-style: dotted; border-width: 2px;
+div.myDiv {
+	border-style: dotted; border-width: 2px;
 			width:100px; height:100px;	
-	}
+}
 	
 ol.a {
 	list-style-type: upper-alpha;
-	}	
+}	
 ul.b {
 	list-style-type: square;
-	}
+}
